@@ -1,3 +1,9 @@
+2004-09-09  Matthias Clasen  <mclasen@redhat.com>
+
+	* glib/gmessages.c (g_return_if_fail_warning): Strip the
+	prefix "IA__" from function names, since that is what
+	GTK+ uses for the PLT-reduction aliases. 
+
 Thu Sep  9 13:52:26 2004  Owen Taylor  <otaylor@redhat.com>
 
 	* glib/gmessages.c (g_return_if_fail_warning): 
