@@ -565,6 +565,12 @@ g_return_if_fail_warning (const char *log_domain,
 			  const char *pretty_function,
 			  const char *expression)
 {
+  /*
+   * Omit the prefix used by the PLT-reduction
+   * technique used in GTK+. 
+   */
+  if (g_str_has_prefix (pretty_function, "IA__"))
+    pretty_function += 4;
   g_log (log_domain,
 	 G_LOG_LEVEL_CRITICAL,
 	 "%s: assertion `%s' failed",
